--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   ],
   "dependencies": {
     "lastfmexportstream": "0.0.4",
-    "minimist": "^0.1.0",
     "moment": "^2.6.0",
     "progress": "^1.1.5",
+    "rucola": "^1.1.0",
     "through2": "^0.4.2"
   }
 }
