--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "argparse": "^1.0.7",
+    "csv-write-stream": "^2.0.0",
     "lastfmexportstream": "0.0.4",
     "moment": "^2.13.0",
     "progress": "^1.1.8",
